--- a/latex/chapter-approach.tex
+++ b/latex/chapter-approach.tex
@@ -157,8 +157,7 @@ because they are applicable to software engineering\index{software engineering} 
 \item Be extensible.\label{wcp:extensible}
 \item Think small.\label{wcp:thinksmall}
 \item Adapt to the user and device.\label{wcp:adaptable}
-\item Deliver the key benefit to HTML authors, not just coders.\label{wcp:htmlauthors}
-~\cite{webcomponentscontributors2014}
+\item Deliver the key benefit to HTML authors, not just coders~\label{wcp:htmlauthors}\cite{webcomponentscontributors2014}.
 \end{enumerate}
 \end{quote}
 
@@ -372,7 +371,7 @@ Adding a discussion forum to a blog or web app is as simple as altering the page
 \end{enumerate}
 
 Because steps 1 and 2 above can load these resources from an external service or content delivery network\index{content delivery network (CDN)},
-Speakur does not require installing any software to the web host serving the blog/app.
+Speakur does not require installing any software to the web server.
 The HTML\index{HTML}, CSS\index{CSS}, and JavaScript\index{JavaScript} files, plus associated resources like images and JSON\index{JSON} language files, 
 can all be loaded from a different web host. 
 This is known as cross-origin resource sharing, or CORS\index{Cross-origin resource sharing (CORS)}.
