--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -89,7 +89,7 @@ That is, until engineers from Google\footnote{
 As of March 2015, Google's Chrome\index{Google!Google Chrome} browser is the most popular desktop browser~\cite{zachte2015}.}
 \index{Google}
 and Mozilla\footnote{
-The Mozilla Foundation is the sponsor of the popular Firefox\index{Firefox}\index{Mozilla!Mozilla Firefox} web browser. It grew out of Netscape, whose Navigator browser helped bring the web to a mass audience.}
+The Mozilla Foundation is the sponsor of the popular Firefox\index{Mozilla!Mozilla Firefox} web browser. It grew out of Netscape, whose Navigator browser helped bring the web to a mass audience.}
 \index{Mozilla} 
 and other organizations got together in 2012 under a W3C Web Applications Working Group\index{Web Applications Working Group}~\cite{w3c2015} 
 to draft a new standard called \textbf{Web Components} that will extend and enhance HTML5\index{HTML!HTML5} in ways that could have a significant long-term impact~\cite{yveslafon2015}. 
