--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -47,7 +47,7 @@
 	title = {Bower},
 	url = {http://bower.io/search},
 	abstract = {Search for Bower packages. Bower is a package manager for the web.},
-	author = {Bower Contributors},
+	author = {Bower contributors},
 	year = {2015},
 	howpublished = {http://bower.io/search}
 },
