--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -466,7 +466,7 @@ Subsidiary topics include assessing the maturity and suitability of current Web 
 
 %\renewcommand*{\bibfont}{\raggedright}
 \setlength{\bibitemsep}{6pt}
-\printbibliography
+\printbibliography[heading=bibintoc]
 %\bibliographystyle{plain}  % Here the bibliography 		     %
 %\bibliography{diss}        % is inserted.			     %
 \index{Bibliography@\emph{Bibliography}}%			     %
